_sass/_layout.scss
/**
 * Site header
 */
.site-header {
    border-top: 5px solid $grey-color-dark;
    border-bottom: 1px solid $grey-color-light;
    margin-bottom: 10px;

    // Positioning context for the mobile navigation icon
    position: relative;
    width: 100%;

    h1 {
        margin-left: 20px;
        margin-bottom: 0px;
        font-family: "Big Caslon", "Book Antiqua", "Palatino Linotype", Georgia, serif;
    }

    a {
        color: $text-color;

        &:hover {
            text-decoration: none;
        }
    }
}

/**
 * Site footer
 */
.site-footer {
//    border-top: 1px solid $grey-color-light;
    padding: $spacing-unit 0;
}

/**
 * Default layout
 */
#loonwerks-logo {
    img {
    }
}

#content {
    position: relative;
    width: 100%;
    min-height: 300px;
    padding: 10px 0;

    #sidebar {
        position: absolute;
        top: 10px;
        bottom: 0;
        left: 0;
        width: 200px;
        
        ul {
            list-style-type: none;
        }
    }

    #main {
        position: relative;
        margin-left: 200px;
        margin-right: 50px;

        padding: 30px;

        box-shadow: 5px 5px 10px 3px rgba(117,117,117,1);
        -webkit-box-shadow: 5px 5px 10px 3px rgba(117,117,117,1);
        -moz-box-shadow: 5px 5px 10px 3px rgba(117,117,117,1);
    }
}

/**
 * Person pages
 */
#person {
    #summary {
        overflow: hidden;
        width: 800px;

        #picture {
            img {
                float: left;
                margin: 10px 10px 20px 10px;
                height: 250px;

                box-shadow: 0px 0px 10px 2px rgba(117,117,117,1);
                -webkit-box-shadow: 0px 0px 10px 2px rgba(117,117,117,1);
                -moz-box-shadow: 0px 0px 10px 2px rgba(117,117,117,1);
            }
        }

        #data {
            float: left;
            padding-left: 30px;
        }
    }

    article {
        clear: both;
        margin-bottom: 20px;
    }
}

/**
 * People index
 */

#people {
    .summary {
        overflow: hidden;
        margin-bottom: 30px;
        width: 400px;

        img {
            float: left;
            height: 100px;
            margin: 10px;

            box-shadow: 0px 0px 10px -1px rgba(117,117,117,1);
            -webkit-box-shadow: 0px 0px 10px -1px rgba(117,117,117,1);
            -moz-box-shadow: 0px 0px 10px -1px rgba(117,117,117,1);
        }
        
        .text {
            float: left;
            padding-top: 20px;
            padding-left: 30px;
        }
    }
}

/**
 * Publications listings
 */

.publications {
    margin-top: 20px;

    ul {
        list-style-type: none;
        
        li {
            border-bottom: 1px dotted gray;
        }

        li:last-child {
            border-bottom: none;
        }

        a {
            display: block;
            padding: 5px 5px;
        }
        
        a:hover {
            text-decoration: none;
            background: $grey-color-light;
        }
    }
}

/**
 * Publication details
 */

.publication {
    #title {
        font-size: $base-font-size * 1.5;
    }

    #authors {
        font-size: $base-font-size;
    }

    #info {
        font-size: $small-font-size;
    }

    #abstract {
        border-top: 1px dotted gray;
        padding-top: 15px;
    }
}

